--- a/css/site/sc_social_slider.css
+++ b/css/site/sc_social_slider.css
@@ -74,6 +74,7 @@
 	padding: 10px;
 	color: #ffffff;
 	margin:0 0 10px 0;
+        min-height: 40px;
 }
 #ssi-contact-form #ssi-close-x{
 	float:right;
